trunk/Archive2/80/c27a951124b9b0/output
main.cpp:4:16: error: expected constructor, destructor, or type conversion before ';' token
 g(Tuple<int>());
                ^
